HIVE-4268. Beeline should support the -f option (Rob Weltman via cws and Julian Hyde).
SqlLine options '-f file' and '--run=file' are now equivalent.

Add SqlLineArgsTest, copied from BeeLineArgsTest, but testing against hsqldb rather than Hive.